Setup Encounter set names to be translated.
It seems like there are translations already in the repo for these,
but it wasn't being picked up.

--- a/src/AppBundle/Resources/config/doctrine/Encounter.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Encounter.orm.yml
@@ -1,6 +1,9 @@
 AppBundle\Entity\Encounter:
     type: entity
     table: Encounter
+    gedmo:
+        translation:
+            locale: locale
     oneToMany:
         cards:
             targetEntity: Card
@@ -22,6 +25,12 @@ AppBundle\Entity\Encounter:
             length: 255
             nullable: false
         name:
+            type: string
+            length: 1024
+            nullable: false
+            gedmo:
+                - translatable
+        realName:
             type: string
             length: 1024
             nullable: false
