Improve import script to pickup changes to real_ fields
Add them to serialize.
Move where they are copied over to be before the diff step.
Mark real_slot as nullable

--- a/src/AppBundle/Resources/config/doctrine/Card.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Card.orm.yml
@@ -214,7 +214,7 @@ AppBundle\Entity\Card:
         realSlot:
             type: string
             length: 50
-            nullable: false
+            nullable: true
         stage:
             type: smallint
             nullable: true
