Add real_back_text for translation.
Useful for things like scenario cards, where the back text contains information
that would be nice to parse in english.

--- a/src/AppBundle/Resources/config/doctrine/Card.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Card.orm.yml
@@ -82,7 +82,7 @@ AppBundle\Entity\Card:
                 default: false
         myriad:
             type: boolean
-            column: myriad            
+            column: myriad
             nullable: true
         encounterPosition:
             type: smallint
@@ -275,6 +275,9 @@ AppBundle\Entity\Card:
             nullable: true
             gedmo:
                 - translatable
+        realBackText:
+            type: text
+            nullable: true
         backFlavor:
             type: text
             nullable: true
