--- a/src/AppBundle/Resources/config/doctrine/Deck.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Deck.orm.yml
@@ -46,6 +46,10 @@ AppBundle\Entity\Deck:
             targetEntity: Deckslot
             mappedBy: deck
             cascade: ["persist","remove"]
+        sideSlots:
+            targetEntity: SideDeckSlot
+            mappedBy: deck
+            cascade: ["persist","remove"]
         children:
             targetEntity: Decklist
             orderBy: { 'dateCreation': 'DESC' }
