Added path '/api/public/find?q=<query>' to find cads via API with the same query syntax used in cards listing

--- a/src/AppBundle/Resources/config/routing/api/routing_api_public.yml
+++ b/src/AppBundle/Resources/config/routing/api/routing_api_public.yml
@@ -49,6 +49,12 @@ api_cards_pack:
     requirements:
         _format: json|xml|xlsx|xls
 
+api_cards_find:
+    path: /find
+    methods: [GET]
+    defaults:
+        _controller: AppBundle:Api:findCards
+
 api_decklist:
     path: /decklist/{decklist_id}.{_format}
     methods: [GET]
