Add dynamic text/cost/health/sanity/traits to modals

--- a/src/AppBundle/Resources/config/doctrine/Card.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Card.orm.yml
@@ -145,6 +145,11 @@ AppBundle\Entity\Card:
             nullable: true
             gedmo:
                 - translatable
+        customizationChange:
+            type: text
+            nullable: true
+            gedmo:
+                - translatable
         realText:
             type: text
             nullable: true
