Change how Carolyn and Vincent build their decks
Use card tags instead of brittle regex

--- a/src/AppBundle/Resources/config/doctrine/Card.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Card.orm.yml
@@ -258,6 +258,10 @@ AppBundle\Entity\Card:
             type: string
             length: 255
             nullable: true
+        tags:
+            type: string
+            length: 255
+            nullable: true
         deckRequirements:
             type: string
             length: 255
