add flag for using default taboo

--- a/src/AppBundle/Resources/config/doctrine/User.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/User.orm.yml
@@ -119,6 +119,12 @@ AppBundle\Entity\User:
             column: is_share_decks
             options:
                 default: false
+        isTaboo:
+            type: boolean
+            nullable: false
+            column: is_taboo
+            options:
+                default: false
         ownedPacks:
             type: string
             length: 512
